# useragentr

./: Cargo.toml  README.md
examples/: basic.rs
examples/custom/: main.rs
src/: cli.rs  generate.rs  lib.rs  main.rs  user_agent.rs  utils.rs
src/cli/: generate.rs
src/user_agent/: browser.rs  browser_variant.rs  config.rs  device.rs  error.rs  os.rs  os_variant.rs  variant.rs
