[package]
name = "useragentr"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.1", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
fastrand = "1.7.0"

[dev-dependencies]
regex = "1.5.6"